fix: align elements

--- a/src/main/ui/src/App.css
+++ b/src/main/ui/src/App.css
@@ -19,19 +19,18 @@
 .navbar {
   display: flex;
   padding: 10px;
-  flex: 1%;
+  flex: 100%;
   max-height: 9%;
 }
 
 .inside {
   background-color: var(--orange-color);
-  /*padding: 10px;*/
-  flex: 88%;
+  flex: 100%;
+  height: 51rem;
 }
 
 .footer {
-  padding: 10px;
-  flex: 10%;
-  max-height: 10%;
-
+  padding: 1rem;
+  flex: 100%;
+  max-height: 23%;
 }
